--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="button_color">#D8CBBC</color>
     <color name="black60">#60000000</color>
     <color name="blue">#0093B9</color>
-    <color name="green">#078325</color>
+    <color name="green">#9019FF19</color>
 
 </resources>
